fix: fix stretched images

--- a/public/style.css
+++ b/public/style.css
@@ -333,7 +333,7 @@ h2 {
 }
 
 .cart-pic {
-  width: 25%;
+  width: 30%;
   height: auto;
   box-shadow: 0px 5px 22px var(--nav-bar-color);
 }
